# qemu-camp-2026-exper-lwenj03

./: .gitignore
hw/gpgpu/: gpgpu.c  gpgpu_core.c
hw/gpio/: Kconfig  gevico_gpio.c  gevico_gpio.h  meson.build
hw/riscv/: Kconfig  g233.c
hw/ssi/: Kconfig  gevico_spi.c  gevico_spi.h  gevico_spi_flash.c  gevico_spi_flash.h  meson.build
hw/timer/: Kconfig  gevico_pwm.c  gevico_pwm.h  gevico_wdt.c  gevico_wdt.h  meson.build
include/hw/i2c/: g233_i2c.h
include/hw/riscv/: g233.h
include/hw/ssi/: g233_spi.h
rust/hw/: Kconfig  meson.build
rust/hw/i2c/: meson.build
rust/hw/i2c/gpio/: meson.build
rust/hw/i2c/gpio/src/: device.rs  lib.rs
rust/hw/i2c/src/: lib.rs
rust/hw/ssi/: Kconfig  meson.build
rust/hw/ssi/gpio/: meson.build
rust/hw/ssi/gpio/src/: device.rs  lib.rs
tests/gevico/qtest/: test-gpio-int.c
